Fix typos in ScalaDemo notebook

--- a/doc/scala/ScalaDemo.ipynb
+++ b/doc/scala/ScalaDemo.ipynb
@@ -7,7 +7,7 @@
     "# Differential Privacy demo in Scala\n",
     "This notebook shows how Scala developers can use differential privacy algorithms available in libdifferentialprivacy. See notebooks/README.md if you can't make it run.\n",
     "\n",
-    "The content of this notebook is a based on [Animals and Carrots](https://github.com/google/differential-privacy/blob/e819e03a20f9d7b0a30f2547c00ba74065b3f549/examples/cc/report_the_carrots.cc) from Google's differential-privacy library."
+    "The content of this notebook is based on [Animals and Carrots](https://github.com/google/differential-privacy/blob/e819e03a20f9d7b0a30f2547c00ba74065b3f549/examples/cc/report_the_carrots.cc) from Google's differential-privacy library."
    ]
   },
   {
@@ -226,7 +226,7 @@
     "\n",
     "val queryEpsilon = 1.0  // default amount of privacy budget we use per query\n",
     "\n",
-    "// Unlike the C++ library the Java version currently does not suppport privately inferred bounds so these have to be set manually\n",
+    "// Unlike the C++ library the Java version currently does not support privately inferred bounds so these have to be set manually\n",
     "val lowerBound = 0.0\n",
     "val upperBound = 100.0\n",
     "\n",
