--- a/doc/scala/ScalaDemo.ipynb
+++ b/doc/scala/ScalaDemo.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5240062a-65f3-488b-9d55-470a553f05a1",
+       "model_id": "62139c10-ab57-4a89-86f0-9f0a5a908618",
        "version_major": 2,
        "version_minor": 0
       },
@@ -68,7 +68,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64eecc6b-1505-440e-80f4-da48fe6e920a",
+       "model_id": "d322065a-4da8-455c-9b35-f4b7ecd604ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -92,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "128b5c0d-8768-4eec-be90-2007cf6f622c",
+       "model_id": "ac06ed85-9946-4a1e-9d63-571737c7bafe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,7 +116,31 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de9b9f4f-0e1a-43d3-8d8d-4eed6ecf7b58",
+       "model_id": "4f1ba6c9-8f52-45d2-99d3-c666b6d789a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "method": "display_data"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "method": "display_data"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e0efeb4d-a1ee-4602-9507-5a6554327855",
        "version_major": 2,
        "version_minor": 0
       },
@@ -128,7 +152,7 @@
     {
      "data": {
       "text/plain": [
-       "scala.collection.JavaConverters$@71f0d880"
+       "scala.collection.JavaConverters$@74cc3285"
       ]
      },
      "execution_count": 1,
@@ -138,15 +162,18 @@
    ],
    "source": [
     "%classpath config resolver mvnLocal\n",
+    "\n",
     "%classpath add mvn com.google.protobuf protobuf-java 3.11.4\n",
     "%classpath add mvn org.apache.commons commons-math3 3.6.1\n",
     "%classpath add mvn com.google.guava guava 28.2-jre\n",
+    "%classpath add mvn com.github.tototoshi scala-csv 1.3.6\n",
     "%classpath add mvn com.google.privacy.differentialprivacy libdifferentialprivacy 1.0\n",
     "\n",
+    "import java.io._\n",
+    "import collection.JavaConverters._\n",
+    "import com.github.tototoshi.csv._\n",
     "\n",
-    "import com.google.privacy.differentialprivacy.BoundedSum\n",
-    "import com.google.privacy.differentialprivacy.Count\n",
-    "import collection.JavaConverters._\n"
+    "import com.google.privacy.differentialprivacy._"
    ]
   },
   {
@@ -173,20 +200,15 @@
     }
    ],
    "source": [
-    "val src = scala.io.Source.fromFile(\"../animals_and_carrots.csv\")\n",
-    "// read numbers only and convert them to Double:\n",
-    "val carrotsScalaData = src.getLines().map(_.split(\",\")(1)).map {s:String => s.toDouble}.toList\n",
+    "val reader = CSVReader.open(new File(\"../animals_and_carrots.csv\"))\n",
+    "\n",
+    "// read numbers only (second column) and convert them to Double:\n",
+    "val carrotsScalaData = reader.all().map(row => row(1).toDouble)\n",
+    "\n",
+    "reader.close()\n",
+    "\n",
     "// convert Scala types to Java types:\n",
-    "val carrotsData = carrotsScalaData.map{ (i:Double) => i:java.lang.Double }.asJava"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "src.close()  // this needs to be here (in a separate cell)"
+    "val carrotsData = carrotsScalaData.map{ i:Double => i:java.lang.Double }.asJava\n"
    ]
   },
   {
@@ -207,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +238,7 @@
        "1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +274,7 @@
       "\n",
       "Privacy budget remaining: 4.00\n",
       "True sum: 9649.000000\n",
-      "DP sum: 9808.014872\n"
+      "DP sum: 9700.022074\n"
      ]
     },
     {
@@ -261,7 +283,7 @@
        "null"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +300,7 @@
     "    val sumResult = privateSum.computeResult()\n",
     "    print(f\"DP sum: $sumResult%f\\n\")\n",
     "} else\n",
-    "    print(f\"Not enough privacy budget left!\")"
+    "    print(\"Not enough privacy budget left!\")"
    ]
   },
   {
@@ -290,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +331,7 @@
        "null"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +348,7 @@
     "    val countResult = privateCount.computeResult()\n",
     "    print(f\"DP count: $countResult%f\\n\")\n",
     "} else\n",
-    "    print(f\"Not enough privacy budget left!\");\n"
+    "    print(\"Not enough privacy budget left!\");\n"
    ]
   },
   {
