Improve code formatting and numbers precision

--- a/doc/scala/ScalaDemo.ipynb
+++ b/doc/scala/ScalaDemo.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62139c10-ab57-4a89-86f0-9f0a5a908618",
+       "model_id": "ac0c31cd-2041-4921-a573-e08a096eac1e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -68,7 +68,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d322065a-4da8-455c-9b35-f4b7ecd604ff",
+       "model_id": "bafc307e-4755-4a2f-975b-cf5f911cbb57",
        "version_major": 2,
        "version_minor": 0
       },
@@ -92,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac06ed85-9946-4a1e-9d63-571737c7bafe",
+       "model_id": "f59e0835-67ab-4eff-8fdd-91fa891ba5b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,7 +116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f1ba6c9-8f52-45d2-99d3-c666b6d789a2",
+       "model_id": "a8202a03-65b0-4dd7-a4ab-f39f5b06a6ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0efeb4d-a1ee-4602-9507-5a6554327855",
+       "model_id": "19e433c1-5619-4feb-88ed-c90d47bfa283",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +152,7 @@
     {
      "data": {
       "text/plain": [
-       "scala.collection.JavaConverters$@74cc3285"
+       "scala.collection.JavaConverters$@73aad03c"
       ]
      },
      "execution_count": 1,
@@ -273,8 +273,8 @@
      "text": [
       "\n",
       "Privacy budget remaining: 4.00\n",
-      "True sum: 9649.000000\n",
-      "DP sum: 9700.022074\n"
+      "True sum: 9649.00\n",
+      "DP sum: 9636.20\n"
      ]
     },
     {
@@ -291,14 +291,19 @@
    "source": [
     "print(f\"\\nPrivacy budget remaining: $privacyBudget%.2f\\n\")\n",
     "val trueSum = carrotsScalaData.sum\n",
-    "print(f\"True sum: $trueSum%f\\n\")\n",
+    "print(f\"True sum: $trueSum%.2f\\n\")\n",
     "\n",
     "if (privacyBudget >= queryEpsilon) {\n",
     "    privacyBudget -= queryEpsilon\n",
-    "    val privateSum = BoundedSum.builder().lower(lowerBound).upper(upperBound).epsilon(queryEpsilon).maxPartitionsContributed(maxPartitions).build()\n",
+    "    val privateSum = BoundedSum.builder()\n",
+    "                               .lower(lowerBound)\n",
+    "                               .upper(upperBound)\n",
+    "                               .maxPartitionsContributed(maxPartitions)\n",
+    "                               .epsilon(queryEpsilon)\n",
+    "                               .build()\n",
     "    privateSum.addEntries(carrotsData)\n",
     "    val sumResult = privateSum.computeResult()\n",
-    "    print(f\"DP sum: $sumResult%f\\n\")\n",
+    "    print(f\"DP sum: $sumResult%.2f\\n\")\n",
     "} else\n",
     "    print(\"Not enough privacy budget left!\")"
    ]
@@ -321,8 +326,8 @@
      "text": [
       "\n",
       "Privacy budget remaining: 3.00\n",
-      "True count: 182.000000\n",
-      "DP count: 181.000000\n"
+      "True count: 182\n",
+      "DP count: 181\n"
      ]
     },
     {
@@ -339,16 +344,19 @@
    "source": [
     "print(f\"\\nPrivacy budget remaining: $privacyBudget%.2f\\n\")\n",
     "val trueCount = carrotsData.size\n",
-    "print(f\"True count: $trueCount%f\\n\")\n",
+    "print(f\"True count: $trueCount%d\\n\")\n",
     "\n",
     "if (privacyBudget >= queryEpsilon) {\n",
     "    privacyBudget -= queryEpsilon\n",
-    "    val privateCount = Count.builder().epsilon(queryEpsilon).maxPartitionsContributed(maxPartitions).build()\n",
-    "    privateCount.incrementBy(carrotsData.size())\n",
+    "    val privateCount = Count.builder()\n",
+    "                            .maxPartitionsContributed(maxPartitions)\n",
+    "                            .epsilon(queryEpsilon)\n",
+    "                            .build()\n",
+    "    privateCount.incrementBy(carrotsData.size)\n",
     "    val countResult = privateCount.computeResult()\n",
-    "    print(f\"DP count: $countResult%f\\n\")\n",
+    "    print(f\"DP count: $countResult%d\\n\")\n",
     "} else\n",
-    "    print(\"Not enough privacy budget left!\");\n"
+    "    print(\"Not enough privacy budget left!\")\n"
    ]
   },
   {
