Make Clojure demo runnable online (mybinder)

--- a/doc/clojure/ClojureCarrotsDemo.ipynb
+++ b/doc/clojure/ClojureCarrotsDemo.ipynb
@@ -187,15 +187,29 @@
     }
    ],
    "source": [
-    "%classpath config resolver mvnLocal\n",
-    "\n",
     "%classpath add mvn com.google.protobuf protobuf-java 3.11.4\n",
     "%classpath add mvn org.apache.commons commons-math3 3.6.1\n",
     "%classpath add mvn com.google.guava guava 28.2-jre\n",
     "%classpath add mvn org.clojure data.csv 1.0.0\n",
     "\n",
-    "%classpath add mvn com.google.privacy.differentialprivacy libdifferentialprivacy 1.0\n",
-    "%classpath add mvn differential-privacy-clj differential-privacy-clj 0.1.1-SNAPSHOT\n",
+    "\n",
+    ";; Download two jars from a server (temporary solution before release)\n",
+    "%classpath add mvn commons-io commons-io 2.6\n",
+    "(import (org.apache.commons.io FileUtils)\n",
+    "        (java.io File)\n",
+    "        (java.net URL))\n",
+    "\n",
+    "(def dpUrl \"http://replomancer.net/OpenMined/libdifferentialprivacy-1.0.jar\")\n",
+    "(def dpFile (str (System/getProperty \"java.io.tmpdir\") \"/differentialprivacy-1.0.jar\"))\n",
+    "(FileUtils/copyURLToFile (URL. dpUrl) (File. dpFile))\n",
+    "%classpath add dynamic dpFile\n",
+    "\n",
+    "(def dp2Url \"http://replomancer.net/OpenMined/differential-privacy-clj-0.1.1-SNAPSHOT.jar\")\n",
+    "(def dp2File (str (System/getProperty \"java.io.tmpdir\") \"/differential-privacy-clj-0.1.1-SNAPSHOT.jar\"))\n",
+    "(FileUtils/copyURLToFile (URL. dp2Url) (File. dp2File))\n",
+    "%classpath add dynamic dp2File\n",
+    "\n",
+    "\n",
     "\n",
     "(require '[clojure.data.csv :as csv]\n",
     "         '[clojure.java.io :as io]\n",
