--- a/doc/scala/ScalaDemo.ipynb
+++ b/doc/scala/ScalaDemo.ipynb
@@ -161,13 +161,22 @@
     }
    ],
    "source": [
-    "%classpath config resolver mvnLocal\n",
-    "\n",
     "%classpath add mvn com.google.protobuf protobuf-java 3.11.4\n",
     "%classpath add mvn org.apache.commons commons-math3 3.6.1\n",
     "%classpath add mvn com.google.guava guava 28.2-jre\n",
     "%classpath add mvn com.github.tototoshi scala-csv 1.3.6\n",
-    "%classpath add mvn com.google.privacy.differentialprivacy libdifferentialprivacy 1.0\n",
+    "\n",
+    "// Download a jar from a server (temporary solution before release)\n",
+    "%classpath add mvn commons-io commons-io 2.6\n",
+    "import org.apache.commons.io.FileUtils\n",
+    "import java.io.File\n",
+    "import java.net.URL\n",
+    "\n",
+    "val dpUrl = \"http://replomancer.net/OpenMined/libdifferentialprivacy-1.0.jar\"\n",
+    "val dpFile = System.getProperty(\"java.io.tmpdir\") ++ \"/differentialprivacy-1.0.jar\"\n",
+    "FileUtils.copyURLToFile(new URL(dpUrl), new File(dpFile))\n",
+    "%classpath add dynamic dpFile\n",
+    "\n",
     "\n",
     "import java.io._\n",
     "import collection.JavaConverters._\n",
