Update Clojure carrots demo notebook (bounded-mean)

--- a/doc/clojure/ClojureCarrotsDemo.ipynb
+++ b/doc/clojure/ClojureCarrotsDemo.ipynb
@@ -25,13 +25,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Added new repo: mvnLocal\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
        "model_id": "",
@@ -46,31 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9523736-48f2-48f9-be01-ed667254ce0e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "method": "display_data"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "method": "display_data"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "343b88a6-16d5-493e-899f-78f160a0a273",
+       "model_id": "00e0f34c-691b-4cb0-a52f-2a149026afad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -94,7 +63,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "159496e1-6c2f-48d3-8c15-30ae629f5919",
+       "model_id": "6225e5b3-f324-4f45-bec4-12fef9d279dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -118,7 +87,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eebfba0c-38a7-4886-8e22-6d8012e0709d",
+       "model_id": "88b42c04-9793-4aaa-ac60-2b7164c073d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -142,7 +111,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70675ef4-b609-451c-9e21-0a919d8e70e3",
+       "model_id": "959263ab-e4d3-4b4d-b02d-98269765cd41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -166,7 +135,31 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f06cfc3-b77b-4c3c-ac8e-515b0db608bb",
+       "model_id": "e4a51a3c-7f7c-426c-996b-d2d1f726c925",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "method": "display_data"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "771bfc40-03f2-466e-9142-b8bcf1bd94bb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "method": "display_data"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f72521a2-01e7-48e5-92f2-9a3577e223aa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -204,8 +197,8 @@
     "(FileUtils/copyURLToFile (URL. dpUrl) (File. dpFile))\n",
     "%classpath add dynamic dpFile\n",
     "\n",
-    "(def dp2Url \"http://replomancer.net/OpenMined/differential-privacy-clj-0.1.1-SNAPSHOT.jar\")\n",
-    "(def dp2File (str (System/getProperty \"java.io.tmpdir\") \"/differential-privacy-clj-0.1.1-SNAPSHOT.jar\"))\n",
+    "(def dp2Url \"http://replomancer.net/OpenMined/differential-privacy-clj-0.2.0-SNAPSHOT.jar\")\n",
+    "(def dp2File (str (System/getProperty \"java.io.tmpdir\") \"/differential-privacy-clj-0.2.0-SNAPSHOT.jar\"))\n",
     "(FileUtils/copyURLToFile (URL. dp2Url) (File. dp2File))\n",
     "%classpath add dynamic dp2File\n",
     "\n",
@@ -272,7 +265,7 @@
     {
      "data": {
       "text/plain": [
-       "#'beaker_clojure_shell_5bab3968-98f3-45d6-a859-c58a6976bf4b/max-partitions"
+       "#'beaker_clojure_shell_fe4e9c81-6c23-4735-982c-a1f06d4f167f/max-partitions"
       ]
      },
      "execution_count": 3,
@@ -337,7 +330,7 @@
     "          dp-sum (dp/bounded-sum carrots-consumption-data\n",
     "                                 :lower lower-bound\n",
     "                                 :upper upper-bound\n",
-    "                                 :max-partitions max-partitions\n",
+    "                                 :max-partitions-contributed max-partitions\n",
     "                                 :epsilon query-epsilon)]\n",
     "        (swap! privacy-budget - query-epsilon)\n",
     "        (println \"True sum:\" true-sum)\n",
@@ -349,7 +342,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here Farmer Fred wants to know the total number of carrot eaters:"
+    "Farmer Fred catches on that the animals are giving him DP results.\n",
+    "\n",
+    "He asks for the mean number of carrots eaten, (TODO: \"but this time, he wants some additional accuracy information to build his intuition.\" requires features yet unavailable in Java)."
    ]
   },
   {
@@ -363,8 +358,8 @@
      "text": [
       "\n",
       "Remaining privacy budget: 3.0\n",
-      "True count: 182\n",
-      "DP count:  181\n"
+      "True mean: 53.02\n",
+      "DP mean: 51.87\n"
      ]
     },
     {
@@ -383,9 +378,60 @@
     "\n",
     "(if (> query-epsilon @privacy-budget)\n",
     "    (println \"Not enough privacy budget left!\")\n",
-    "    (let [true-count (count carrots-consumption-data)\n",
-    "          dp-count (dp/count carrots-consumption-data\n",
-    "                             :max-partitions 1\n",
+    "    (let [true-mean (/ (reduce + carrots-consumption-data) (count carrots-consumption-data))\n",
+    "          dp-mean (dp/bounded-mean carrots-consumption-data\n",
+    "                                   :lower lower-bound\n",
+    "                                   :upper upper-bound\n",
+    "                                   :max-contributions-per-partition 1\n",
+    "                                   :max-partitions-contributed 1\n",
+    "                                   :epsilon query-epsilon)]\n",
+    "        (swap! privacy-budget - query-epsilon)\n",
+    "        (printf \"True mean: %.2f\\n\" true-mean)\n",
+    "        (printf \"DP mean: %.2f\\n\" dp-mean)\n",
+    "        (flush)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fred wonders how many gluttons are in his zoo. How many animals ate over 90 carrots?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Remaining privacy budget: 2.0\n",
+      "True count: 21\n",
+      "DP count:  22\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "null"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(println \"\\nRemaining privacy budget:\" @privacy-budget)\n",
+    "\n",
+    "(if (> query-epsilon @privacy-budget)\n",
+    "    (println \"Not enough privacy budget left!\")\n",
+    "    (let [true-count (count (filter #(> % 90) carrots-consumption-data))\n",
+    "          dp-count (dp/count (filter #(> % 90) carrots-consumption-data)\n",
+    "                             :max-partitions-contributed 1\n",
     "                             :epsilon query-epsilon)]\n",
     "        (swap! privacy-budget - query-epsilon)\n",
     "        (println \"True count:\" true-count)\n",
