Update Scala and Kotlin carrot demos (BoundedMean)

--- a/doc/kotlin/KotlinCarrotsDemo.ipynb
+++ b/doc/kotlin/KotlinCarrotsDemo.ipynb
@@ -38,7 +38,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a87cb8b8-44ac-4e14-ba04-e95e7b8072ab",
+       "model_id": "2e6d04b9-99d5-4ff3-b9d9-ce91a4f25cf1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe097a5b-ac3c-4ce8-aa01-23615ffea2a0",
+       "model_id": "7095989b-ad26-4e3c-a5d9-ed2e015ea55a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,7 +86,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79ed546f-d825-4f22-b9a5-d49d4566f411",
+       "model_id": "d99f7dc1-8c89-4c39-aad9-5d8819586218",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66f422f2-8a90-49f0-b292-d74f7a83b042",
+       "model_id": "32cb5500-ddd0-49d1-8f02-86c38fec0b7f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -134,7 +134,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ae08619-47cf-4ef8-8fd8-1fedabebbe6b",
+       "model_id": "a080582a-9c6d-4fe5-9127-fc3d1018575f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -146,7 +146,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74b786dd-e113-413f-b205-d1bd7e23e09b",
+       "model_id": "7c1eb402-5c2c-43d7-aced-8098a4ce6971",
        "version_major": 2,
        "version_minor": 0
       },
@@ -260,7 +260,8 @@
     "val lowerBound = 0.0\n",
     "val upperBound = 100.0\n",
     "\n",
-    "val maxPartitions = 1"
+    "val maxPartitions = 1\n",
+    "val maxContributions = 1"
    ]
   },
   {
@@ -282,7 +283,7 @@
       "\n",
       "Privacy budget remaining: 4.00\n",
       "True sum: 9649.00\n",
-      "DP sum: 9493.46\n"
+      "DP sum: 9685.70\n"
      ]
     },
     {
@@ -320,7 +321,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here Farmer Fred wants to know the total number of carrot eaters:"
+    "Farmer Fred catches on that the animals are giving him DP results.\n",
+    "\n",
+    "He asks for the mean number of carrots eaten, (TODO: \"but this time, he wants some additional accuracy information to build his intuition.\" requires features yet unavailable in Java)."
    ]
   },
   {
@@ -334,8 +337,8 @@
      "text": [
       "\n",
       "Privacy budget remaining: 3.00\n",
-      "True count: 182\n",
-      "DP count: 181\n"
+      "True mean: 53.02\n",
+      "DP mean: 51.13\n"
      ]
     },
     {
@@ -351,7 +354,61 @@
    ],
    "source": [
     "println(\"\\nPrivacy budget remaining: %.2f\".format(privacyBudget))\n",
-    "val trueCount = carrotsData.size\n",
+    "val trueMean = trueSum / carrotsData.size\n",
+    "println(\"True mean: %.2f\".format(trueMean))\n",
+    "\n",
+    "if (privacyBudget >= queryEpsilon) {\n",
+    "    privacyBudget -= queryEpsilon\n",
+    "    val privateMean = BoundedMean.builder()\n",
+    "                                 .lower(lowerBound)\n",
+    "                                 .upper(upperBound)\n",
+    "                                 .maxPartitionsContributed(maxPartitions)\n",
+    "                                 .maxContributionsPerPartition(maxContributions)\n",
+    "                                 .epsilon(queryEpsilon)\n",
+    "                                 .build()\n",
+    "    privateMean.addEntries(carrotsData)\n",
+    "    val meanResult = privateMean.computeResult()\n",
+    "    println(\"DP mean: %.2f\".format(meanResult))\n",
+    "} else\n",
+    "    println(\"Not enough privacy budget left!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fred wonders how many gluttons are in his zoo. How many animals ate over 90 carrots?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Privacy budget remaining: 2.00\n",
+      "True count: 21\n",
+      "DP count: 19\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "null"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "println(\"\\nPrivacy budget remaining: %.2f\".format(privacyBudget))\n",
+    "val trueCount = carrotsData.filter{ it > 90 }.size\n",
     "println(\"True count: $trueCount\")\n",
     "\n",
     "if (privacyBudget >= queryEpsilon) {\n",
@@ -360,7 +417,7 @@
     "                            .maxPartitionsContributed(maxPartitions)\n",
     "                            .epsilon(queryEpsilon)\n",
     "                            .build()\n",
-    "    privateCount.incrementBy(carrotsData.size)\n",
+    "    privateCount.incrementBy(trueCount)\n",
     "    val countResult = privateCount.computeResult()\n",
     "    println(\"DP count: $countResult\")\n",
     "} else\n",
