Move carrots demo data to example_data folder

--- a/doc/clojure/ClojureCarrotsDemo.ipynb
+++ b/doc/clojure/ClojureCarrotsDemo.ipynb
@@ -234,7 +234,7 @@
    ],
    "source": [
     "(def carrots-consumption-data\n",
-    "  (with-open [reader (io/reader \"../animals_and_carrots.csv\")]\n",
+    "  (with-open [reader (io/reader \"../example_data/carrots_demo/animals_and_carrots.csv\")]\n",
     "    (let [data (csv/read-csv reader)]\n",
     "      (mapv (fn [[animal consumption]] (Double/parseDouble consumption)) data))))\n",
     "\n",
