--- a/doc/kotlin/KotlinCarrotsDemo.ipynb
+++ b/doc/kotlin/KotlinCarrotsDemo.ipynb
@@ -213,7 +213,7 @@
     }
    ],
    "source": [
-    "val carrotsData = csvReader().readAll(File(\"../animals_and_carrots.csv\"))\n",
+    "val carrotsData = csvReader().readAll(File(\"../example_data/carrots_demo/animals_and_carrots.csv\"))\n",
     "                             .map{ (_, carrots_cnt) -> carrots_cnt.toDouble() }\n",
     "\n",
     "carrotsData"
