--- a/doc/scala/ScalaDemo.ipynb
+++ b/doc/scala/ScalaDemo.ipynb
@@ -214,7 +214,7 @@
     }
    ],
    "source": [
-    "val reader = CSVReader.open(new File(\"../animals_and_carrots.csv\"))\n",
+    "val reader = CSVReader.open(new File(\"../example_data/carrots_demo/animals_and_carrots.csv\"))\n",
     "\n",
     "// read numbers only (second column) and convert them to Double:\n",
     "val carrotsScalaData = reader.all().map(row => row(1).toDouble)\n",
