Clean up code in the Clojure Restaurant Demo notebook

--- a/doc/clojure/ClojureRestaurantDemo.ipynb
+++ b/doc/clojure/ClojureRestaurantDemo.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Restaurant Demo in Clojure\n",
     "\n",
-    "This is a demo for differential-privacy-clj, a wrapper for [differential privacy library by Google](https://github.com/google/differential-privacy). The contents of this demo are ported from a differential privacy library [example](https://github.com/google/differential-privacy/tree/123626ff1060d9884a16f04b0d743a72bb08607e/examples/java).\n",
+    "This is a demo for [differential-privacy-clj](https://github.com/OpenMined/clojure-dp), a wrapper for [differential privacy library by Google](https://github.com/google/differential-privacy). The contents of this demo are ported from a differential privacy library [example](https://github.com/google/differential-privacy/tree/123626ff1060d9884a16f04b0d743a72bb08607e/examples/java).\n",
     "\n",
     "Imagine a fictional restaurant owner named Alice who would like to share\n",
     "business statistics with her visitors. Alice knows when visitors enter the\n",
@@ -135,7 +135,7 @@
     "\n",
     "(def day-visits-data\n",
     "  (with-open [reader (io/reader \"../example_data/restaurant_demo/day_data.csv\")]\n",
-    "    (let [data (rest (csv/read-csv reader))]  ;; skip the first line\n",
+    "    (let [data (rest (csv/read-csv reader))]  ;; skip the first line (header)\n",
     "      (mapv (fn [[visitor-id time-entered minutes-spent money-spent]]\n",
     "                [visitor-id\n",
     "                 (LocalTime/parse (clojure.string/lower-case time-entered)\n",
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ";; Produce a sequence od hours from day-visits-data\n",
+    ";; Produce a sequence of hours from day-visits-data\n",
     ";; e.g. '(9 11 10 10 11 12 13 12 12 12 14 15 16 18 17 18 17 20 19).\n",
     "(def visit-hours (map (fn [[_ time-entered _ _]] (.getHour time-entered))\n",
     "                      day-visits-data))\n",
@@ -266,7 +266,7 @@
    "source": [
     "(def week-visits-data\n",
     "  (with-open [reader (io/reader \"../example_data/restaurant_demo/week_data.csv\")]\n",
-    "    (let [data (rest (csv/read-csv reader))]  ;; skip the first line\n",
+    "    (let [data (rest (csv/read-csv reader))]  ;; skip the first line (header)\n",
     "      (mapv (fn [[visitor-id time-entered minutes-spent money-spent weekday-nr]]\n",
     "                [visitor-id\n",
     "                 (LocalTime/parse (clojure.string/lower-case time-entered) time-formatter)\n",
@@ -276,8 +276,8 @@
     "                data))))\n",
     "\n",
     "(defn get-visitor-id [[visitor-id _ _ _ _]] visitor-id)\n",
-    "(defn get-weekday [[_ _ _ _ weekday-nr]] weekday-nr)\n",
     "(defn get-money-spent [[_ _ _ money-spent _]] money-spent)\n",
+    "(defn get-weekday [[_ _ _ _ weekday-nr]] weekday-nr)\n",
     "\n",
     "(def all-week-days [\"Monday\" \"Tuesday\" \"Wednesday\" \"Thursday\" \"Friday\" \"Saturday\" \"Sunday\"])\n",
     "(def week-days-cnt 7)\n",
@@ -299,14 +299,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ";; Produce a sequence od weekday numbers from week-visits-data\n",
-    ";; e.g. '(1 1 1 1 2 2 2 2 3 3 3 3 4 4 4 5 5 6 6 7).\n",
-    "(def visit-days (map get-weekday week-visits-data))\n",
-    "\n",
     ";; Compute non-private frequencies of visits per weekday\n",
     ";; e.g. {1 300, 2 300, 3 400, 4 400, 5 450, 6 500, 7 500}\n",
     "(def visit-day-frequencies\n",
-    "    (->> visit-days\n",
+    "    (->> week-visits-data\n",
+    "         (map get-weekday)\n",
     "         frequencies\n",
     "         (into (sorted-map))))\n",
     "\n",
@@ -358,26 +355,35 @@
     "\n",
     ";; Data about visits needs some preprocessing because of\n",
     ";; the example-max-visits-per-week bounding.\n",
-    ";; You don't have to understand this now.\n",
+    ";; You don't have to understand this function now.\n",
     ";; It will be explained in a moment.\n",
     "(def example-visit-day-frequencies\n",
-    "  (->> week-visits-data\n",
-    "       (group-by get-visitor-id)\n",
-    "       (fmap #(map get-weekday %))\n",
-    "       (fmap set)\n",
-    "       (fmap #(->> %\n",
-    "                   shuffle\n",
-    "                   (take example-max-visits-per-week)))\n",
-    "       ((fn [visitor-bounded-days]\n",
-    "          (filter (fn [visit-vector]\n",
-    "                      (let [visitor-id (get-visitor-id visit-vector)\n",
-    "                            visit-weekday (get-weekday visit-vector)]\n",
-    "                         (some #{visit-weekday}\n",
-    "                               (get visitor-bounded-days visitor-id))))\n",
-    "                  week-visits-data)))\n",
-    "       (map get-weekday)\n",
-    "       frequencies\n",
-    "       (into (sorted-map))))\n",
+    "  (let [;; produce a dictionary of visit weekdays:\n",
+    "        ;;\n",
+    "        ;; {visitor-id1 '(1 3)\n",
+    "        ;;  visitor-id2 '(4 6 2)\n",
+    "        ;;  ,,, }\n",
+    "        ;; \n",
+    "        ;; where no visitor has more than example-max-visits-per-week\n",
+    "        ;; visit weekdays.\n",
+    "        visitor-weekdays (->> week-visits-data\n",
+    "                              (group-by get-visitor-id)\n",
+    "                              (fmap #(->> %\n",
+    "                                          (map get-weekday)\n",
+    "                                          set\n",
+    "                                          shuffle\n",
+    "                                          (take example-max-visits-per-week))))]\n",
+    "    (->> week-visits-data\n",
+    "         ;; discard exceeding visits \n",
+    "         (filter #(some #{(get-weekday %)}\n",
+    "                        (get visitor-weekdays (get-visitor-id %))))\n",
+    "\n",
+    "         ;; the rest of the computation is same as before\n",
+    "         (map get-weekday)\n",
+    "         frequencies\n",
+    "         (into (sorted-map)))))\n",
+    "\n",
+    "\n",
     "\n",
     ";; Number of visits on Monday.\n",
     "(def example-monday-visits-count\n",
@@ -396,7 +402,8 @@
     "(println \"Non-private count:\\t\" example-monday-visits-count)\n",
     "(println \"DP count:\\t\\t\" example-monday-visits-dp-count)\n",
     "\n",
-    "(println \"Total week visits in the processed dataset (non-private count): \" (reduce + (vals example-visit-day-frequencies)))"
+    "(println \"Total week visits in the processed dataset (non-private count): \"\n",
+    "         (reduce + (vals example-visit-day-frequencies)))"
    ]
   },
   {
@@ -473,10 +480,8 @@
     ";;       5 [1.0] 6 [33.0 12.0 45.0]\n",
     ";;       7 [49.0 12.0 44.0 12.0]}\n",
     "(def day-revenue (->> week-visits-data\n",
-    "                      (map #(vector (get-weekday %) (get-money-spent %)))\n",
-    "                      (reduce (fn [res [weekday-nr money-spent]]\n",
-    "                                  (update res weekday-nr #(conj % money-spent)))\n",
-    "                              {1 [] 2 [] 3 [] 4 [] 5 [] 6 [] 7 []})))\n",
+    "                      (group-by get-weekday)\n",
+    "                      (fmap #(map get-money-spent %))))\n",
     "\n",
     ";; Compute non-private sums of day revenue (true values).\n",
     "(def sum-revenue-per-day\n",
